modifying layout for image row, putting in latest content for service details pages

--- a/details-cakes.html
+++ b/details-cakes.html
@@ -37,9 +37,9 @@
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="cake-header">Cakes and Cupcakes</h3>
 			<ul class="img-row">
-				<li><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-1"><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-2"><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-3"><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
