--- a/details-catering.html
+++ b/details-catering.html
@@ -37,9 +37,9 @@
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="catering-header">Catering</h3>
 			<ul class="img-row">
-				<li><img src="img/catering-img-1.jpg" title="Drinks" alt="Drinks"></li>
-				<li><img src="img/catering-img-2.jpg" title="Plate of Food" alt="Plate of Food"></li>
-				<li><img src="img/catering-img-3.jpg" title="Popcorn Display" alt="Popcorn Display"></li>
+				<li id="img-1"><img src="img/catering-img-1.jpg" title="Drinks" alt="Drinks"></li>
+				<li id="img-2"><img src="img/catering-img-3.jpg" title="Plate of Food" alt="Plate of Food"></li>
+				<li id="img-3"><img src="img/catering-img-2.jpg" title="Popcorn Display" alt="Popcorn Display"></li>
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
