--- a/details-consultant.html
+++ b/details-consultant.html
@@ -37,9 +37,9 @@
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="consultant-header">Consultant / Coordinator / Planner, Saves You Time and Money</h3>
 			<ul class="img-row">
-				<li><img src="img/consultant-img-1.jpg" title="Wedding Dress" alt="Wedding Dress"></li>
-				<li><img src="img/consultant-img-2.jpg" title="801-319-1159" alt="801-319-1159"></li>
-				<li><img src="img/consultant-img-3.jpg" title="Flowers" alt="Flowers"></li>
+				<li id="img-1"><img src="img/consultant-img-1.jpg" title="Wedding Dress" alt="Wedding Dress"></li>
+				<li id="img-2"><img src="img/consultant-img-2.jpg" title="801-319-1159" alt="801-319-1159"></li>
+				<li id="img-3"><img src="img/consultant-img-3.jpg" title="Flowers" alt="Flowers"></li>
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
