--- a/details-music.html
+++ b/details-music.html
@@ -37,9 +37,9 @@
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="music-header">Music</h3>
 			<ul class="img-row">
-				<li><img src="img/music-img-1.jpg" title="Dancing" alt="Dancing"></li>
-				<li><img src="img/music-img-2.jpg" title="Harp" alt="Harp"></li>
-				<li><img src="img/music-img-3.jpg" title="Dancing" alt="Dancing"></li>
+				<li id="img-1"><img src="img/music-img-1.jpg" title="Dancing" alt="Dancing"></li>
+				<li id="img-2"><img src="img/music-img-2.jpg" title="Harp" alt="Harp"></li>
+				<li id="img-3"><img src="img/music-img-3.jpg" title="Dancing" alt="Dancing"></li>
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
