--- a/details-packages.html
+++ b/details-packages.html
@@ -33,19 +33,57 @@
 			</header>
 		</div> <!-- /#header-container -->
 		
-		<div id="content">
+		<div id="content" class="packages">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="packages-header">Packages</h3>
-			<div class="left-side">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			<!--
+			<ul class="img-row">
+				<li id="img-1"><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-2"><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-3"><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<span class="clear"></span>
+			</ul>
+			-->
+			<div class="deets-container-1">
+				<div class="background"></div>
+				<p class="fancy"><b>"Complete Rental Package" &nbsp; $495</b> &nbsp; ($739 value if rented ala cart)</p>
+				<ul>
+					<li>Sign In Table Set (includes Linen)</li>
+					<li>Bridal Easel</li>
+					<li>Gift Table Set (Table/Linen or Bench)</li>
+					<li>Cake Table Set</li>
+					<li>Backdrop (Arch Selection)</li>
+					<li>8 - Guest Tables 5'</li>
+					<li>8 - Linens (White or Ivory)</li>
+					<li>8 -Centerpieces (Square Glass or Lantern)</li>
+					<li>64 - White Wedding Chairs</li>
+					<li>Banquet Table</li>
+					<li>Banquet Table Linen</li>
+				</ul>
+				<p class="fancy"><b>Let us decorate this package for you! Only $225</b></p>
+				<p>64 Free Chair Ties!</p>
 			</div>
-			<div class="right-side">
-				<img src="img/details-packages.jpg" alt="" title="flowers">
-			</div>
-			<span class="clear"></span>
-			<div class="lower-half">
-				<p>This area will contain details and pricing.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum officia deserunt mollit anim id est laborum</p>
+			<div class="deets-container-2">
+				<div class="background"></div>
+				<p class="fancy"><b>"Signature Rental Package" &nbsp; $795</b> &nbsp; ($1220 value if rented ala cart)</p>
+				<ul>
+					<li>Sign In Table Set (includes; Linen, Card Holder, Panel)</li>
+					<li>2 - Bridal Easels</li>
+					<li>Gift Table Set (Table/Linen or Bench)</li>
+					<li>Cake Table Set with Arch</li>
+					<li>Backdrop ($250 Value)</li>
+					<li>8 - Guest Tables 5'</li>
+					<li>8 - Linens</li>
+					<li>8 - Overlays</li>
+					<li>8 -Centerpieces (Square Glass or Lantern)</li>
+					<li>80 - Black or White Wedding Chairs</li>
+					<li>2 - Banquet Tables</li>
+					<li>2 - Banquet Table Linen</li>
+					<li>4 - Shepherd Hooks with Lanterns</li>
+					<li>TV / DVD Setup</li>
+				</ul>
+				<p class="fancy"><b>Let us decorate this package for you! Only $325</b></p>
+				<p>80 Free Chair Ties!</p>
 			</div>
 			
 		</div> <!-- /#content -->
