--- a/details-specialEvents.html
+++ b/details-specialEvents.html
@@ -37,9 +37,9 @@
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="specialEvents-header">Special Events</h3>
 			<ul class="img-row">
-				<li><img src="img/specialEvents-2.jpg" title="Kid Friendly" alt="Kid Friendly"></li>
-				<li><img src="img/specialEvents-1.jpg" title="Shower" alt="Shower"></li>
-				<li><img src="img/specialEvents-3.jpg" title="Homecoming" alt="Homecoming"></li>
+				<li id="img-1"><img src="img/specialEvents-3.jpg" title="Kid Friendly" alt="Kid Friendly"></li>
+				<li id="img-2"><img src="img/specialEvents-2.jpg" title="Shower" alt="Shower"></li>
+				<li id="img-3"><img src="img/specialEvents-1.jpg" title="Homecoming" alt="Homecoming"></li>
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
