--- a/details-floral.html
+++ b/details-floral.html
@@ -37,9 +37,9 @@
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="floral-header">Flowers</h3>
 			<ul class="img-row">
-				<li><img src="img/floral-img-1.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
-				<li><img src="img/floral-img-2.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
-				<li><img src="img/floral-img-3.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
+				<li id="img-1"><img src="img/floral-img-3.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
+				<li id="img-2"><img src="img/floral-img-1.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
+				<li id="img-3"><img src="img/floral-img-2.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
