--- a/details-consultant.html
+++ b/details-consultant.html
@@ -58,7 +58,7 @@
 				<div class="background"></div>
 				<p class="diy"><span>DIY</span>If you want to <b>"do it yourself"</b> we provide everything you need. Vendors, décor, knowledge</p>
 				<span class="clear"></span>
-				<p class="a-la-carte"><span>A La Carte</span>You <b>"pick and choose"</b> the services you need help with</p>
+				<p class="a-la-carte"><span>A'la Carte</span>You <b>"pick and choose"</b> the services you need help with</p>
 				<span class="clear"></span>
 				<p class="whole-package"><span>The Whole Package</span>Why reinvent the wheel, <b>"we know what to do"</b>, where to go, at an affordable price</p>
 			</div>
