--- a/details-decorations.html
+++ b/details-decorations.html
@@ -46,48 +46,32 @@
 			-->
 			<div class="deets-container-1">
 				<div class="background"></div>
-				<!--
-				<p class="fancy"><b>"Complete Rental Package" &nbsp; $495</b> &nbsp; ($739 value if rented ala cart)</p>
-				<ul>
-					<li>Sign In Table Set (includes Linen)</li>
-					<li>Bridal Easel</li>
-					<li>Gift Table Set (Table/Linen or Bench)</li>
-					<li>Cake Table Set</li>
-					<li>Backdrop (Arch Selection)</li>
-					<li>8 - Guest Tables 5'</li>
-					<li>8 - Linens (White or Ivory)</li>
-					<li>8 -Centerpieces (Square Glass or Lantern)</li>
-					<li>64 - White Wedding Chairs</li>
-					<li>Banquet Table</li>
-					<li>Banquet Table Linen</li>
+				<ul class="price-description">
+					<li>Wedding Chairs<br />(White or Black)</li>
+					<li>Tables</li>
+					<li>Linens</li>
+					<li>Runners / Overlays</li>
+					<li>Chair Ties</li>
+					<li>Backdrops / Arches</li>
+					<li>Accessories</li>
 				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $225</b></p>
-				<p>64 Free Chair Ties!</p>
-				-->
+				<ul class="pricing">
+					<li>$2.00 each</li>
+					<li>&nbsp;</li>
+					<li>$8.00 each</li>
+					<li>$11.00 and up</li>
+					<li>$5.00 and up</li>
+					<li>$1.00 and up</li>
+					<li>$75.00 and up</li>
+					<li>$5.00 and up</li>
+				</ul>
+				<span class="clear"></span>
+				<p>Contact us! We have too many things to list individually!</p>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
-				<!--
-				<p class="fancy"><b>"Signature Rental Package" &nbsp; $795</b> &nbsp; ($1220 value if rented ala cart)</p>
-				<ul>
-					<li>Sign In Table Set (includes; Linen, Card Holder, Panel)</li>
-					<li>2 - Bridal Easels</li>
-					<li>Gift Table Set (Table/Linen or Bench)</li>
-					<li>Cake Table Set with Arch</li>
-					<li>Backdrop ($250 Value)</li>
-					<li>8 - Guest Tables 5'</li>
-					<li>8 - Linens</li>
-					<li>8 - Overlays</li>
-					<li>8 -Centerpieces (Square Glass or Lantern)</li>
-					<li>80 - Black or White Wedding Chairs</li>
-					<li>2 - Banquet Tables</li>
-					<li>2 - Banquet Table Linen</li>
-					<li>4 - Shepherd Hooks with Lanterns</li>
-					<li>TV / DVD Setup</li>
-				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $325</b></p>
-				<p>80 Free Chair Ties!</p>
-				-->
+				<p>You'll LOVE IT when you see our different styles and options;<br />From Vintage to Traditional, Elegant to a very Classy Western.</p>
+				<p>We can highlight your unique personality with our décor options.</p>
 			</div>
 			
 		</div> <!-- /#content -->
