--- a/details-lighting.html
+++ b/details-lighting.html
@@ -46,48 +46,23 @@
 			-->
 			<div class="deets-container-1">
 				<div class="background"></div>
-				<!--
-				<p class="fancy"><b>"Complete Rental Package" &nbsp; $495</b> &nbsp; ($739 value if rented ala cart)</p>
-				<ul>
-					<li>Sign In Table Set (includes Linen)</li>
-					<li>Bridal Easel</li>
-					<li>Gift Table Set (Table/Linen or Bench)</li>
-					<li>Cake Table Set</li>
-					<li>Backdrop (Arch Selection)</li>
-					<li>8 - Guest Tables 5'</li>
-					<li>8 - Linens (White or Ivory)</li>
-					<li>8 -Centerpieces (Square Glass or Lantern)</li>
-					<li>64 - White Wedding Chairs</li>
-					<li>Banquet Table</li>
-					<li>Banquet Table Linen</li>
-				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $225</b></p>
-				<p>64 Free Chair Ties!</p>
-				-->
+				<p>Lighting and Drapery add to your event in ways that make it unique and set a mood for the occasion.</p>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
-				<!--
-				<p class="fancy"><b>"Signature Rental Package" &nbsp; $795</b> &nbsp; ($1220 value if rented ala cart)</p>
-				<ul>
-					<li>Sign In Table Set (includes; Linen, Card Holder, Panel)</li>
-					<li>2 - Bridal Easels</li>
-					<li>Gift Table Set (Table/Linen or Bench)</li>
-					<li>Cake Table Set with Arch</li>
-					<li>Backdrop ($250 Value)</li>
-					<li>8 - Guest Tables 5'</li>
-					<li>8 - Linens</li>
-					<li>8 - Overlays</li>
-					<li>8 -Centerpieces (Square Glass or Lantern)</li>
-					<li>80 - Black or White Wedding Chairs</li>
-					<li>2 - Banquet Tables</li>
-					<li>2 - Banquet Table Linen</li>
-					<li>4 - Shepherd Hooks with Lanterns</li>
-					<li>TV / DVD Setup</li>
+				<p>Prices</p>
+				<ul class="price-description">
+					<li>Lighting</li>
+					<li>Drapery</li>
+					<li>Combination</li>
 				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $325</b></p>
-				<p>80 Free Chair Ties!</p>
-				-->
+				<ul class="pricing">
+					<li>Start at $175</li>
+					<li>Start at $395</li>
+					<li>Start at $495</li>
+				</ul>
+				<span class="clear"></span>
+				<p>Each Venue is different and we will work to make YOUR OCCASION AMAZING, we give a specific quote to each event and venue!</p>
 			</div>
 			
 		</div> <!-- /#content -->
