--- a/details-specialEvents.html
+++ b/details-specialEvents.html
@@ -46,28 +46,28 @@
 				<div class="background"></div>
 				<ul>
 					<li style="margin-bottom: 5px;"><b>Events we've done: &nbsp; (Besides Weddings!)</b></li>
-					<li>Bridal Showers</li>
-					<li>Baby Showers</li>
-					<li>Family Reunions</li>
-					<li>Class Reunions</li>
-					<li>Birthday Parties</li>
-					<li>Anniversaries</li>
-					<li>Quinceanera</li>
-					<li>Farewells / Homecomings</li>
-					<li>Company Parties</li>
+					<li>Bridal Showers</li><hr>
+					<li>Baby Showers</li><hr>
+					<li>Family Reunions</li><hr>
+					<li>Class Reunions</li><hr>
+					<li>Birthday Parties</li><hr>
+					<li>Anniversaries</li><hr>
+					<li>Quinceanera</li><hr>
+					<li>Farewells / Homecomings</li><hr>
+					<li>Company Parties</li><hr>
 					<li>Holiday Decorating</li>
 				</ul>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
 				<ul>
-					<li style="font-size: 18px; text-transform: none;"><b>Imagine...</b></li>
-					<li>* A place that meets all budget needs whether big or small</li>
-					<li>* A place you can find the experts that really care about what you want</li>
-					<li>* A place that's; happening with new ideas, displays, new trends, and old values!</li>
-					<li>* A place you can experience the art of "do it yourself" or turn it all over to us</li>
-					<li>* A place where you, family and friends can go that's warm, inviting and stress free</li>
-					<li style="font-size: 18px; text-transform: none; line-height: 1.3;"><b>For Every Occasion<br/>is that place!</b></li>
+					<li><b>Imagine...</b></li>
+					<li>&ast; A place that meets all budget needs whether big or small,</li>
+					<li>&ast; A place you can find the experts that really care about what<br />you want,</li>
+					<li>&ast; A place that's; happening with new ideas, displays, new trends, and old values,</li>
+					<li>&ast; A place you can experience the art of "do it yourself" or turn it all over to us,</li>
+					<li>&ast; A place where you, family and friends can go that's warm, inviting and stress free...</li>
+					<li style="padding-top: 30px; font-size: 28px;"><b>For Every Occasion<br/>is that place!</b></li>
 				</ul>
 			</div>
 		</div> <!-- /#content -->
