content for invitations

--- a/details-invitations.html
+++ b/details-invitations.html
@@ -46,48 +46,16 @@
 			-->
 			<div class="deets-container-1">
 				<div class="background"></div>
-				<!--
-				<p class="fancy"><b>"Complete Rental Package" &nbsp; $495</b> &nbsp; ($739 value if rented ala cart)</p>
-				<ul>
-					<li>Sign In Table Set (includes Linen)</li>
-					<li>Bridal Easel</li>
-					<li>Gift Table Set (Table/Linen or Bench)</li>
-					<li>Cake Table Set</li>
-					<li>Backdrop (Arch Selection)</li>
-					<li>8 - Guest Tables 5'</li>
-					<li>8 - Linens (White or Ivory)</li>
-					<li>8 -Centerpieces (Square Glass or Lantern)</li>
-					<li>64 - White Wedding Chairs</li>
-					<li>Banquet Table</li>
-					<li>Banquet Table Linen</li>
-				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $225</b></p>
-				<p>64 Free Chair Ties!</p>
-				-->
+				<p><img src="img/logo-2.png" title="For Every Occasion" alt="For Every Occasion"><br />has teamed with<br /><a href="http://www.beautifulweddingannouncements.com/" target="_blank"><img src="img/beautifulWeddingAnnouncements-logo.png" title="Beautiful Wedding Announcements" alt="Beautiful Wedding Announcements"></a></p>
+				<p>to get you Great Invitations at<br />an EXCLUSIVE PRICE!</p>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
-				<!--
-				<p class="fancy"><b>"Signature Rental Package" &nbsp; $795</b> &nbsp; ($1220 value if rented ala cart)</p>
-				<ul>
-					<li>Sign In Table Set (includes; Linen, Card Holder, Panel)</li>
-					<li>2 - Bridal Easels</li>
-					<li>Gift Table Set (Table/Linen or Bench)</li>
-					<li>Cake Table Set with Arch</li>
-					<li>Backdrop ($250 Value)</li>
-					<li>8 - Guest Tables 5'</li>
-					<li>8 - Linens</li>
-					<li>8 - Overlays</li>
-					<li>8 -Centerpieces (Square Glass or Lantern)</li>
-					<li>80 - Black or White Wedding Chairs</li>
-					<li>2 - Banquet Tables</li>
-					<li>2 - Banquet Table Linen</li>
-					<li>4 - Shepherd Hooks with Lanterns</li>
-					<li>TV / DVD Setup</li>
-				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $325</b></p>
-				<p>80 Free Chair Ties!</p>
-				-->
+				<p class="fancy">Here's How</p>
+				<p><strong>&ast; Get 5% OFF</strong> "<a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by simply emailing "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Your Name and Wedding Date</p>
+				<p><strong>&ast; Get 10% OFF</strong> "<a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by using $500 of "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Services</p>
+				<p><strong>&ast; Get 15% OFF</strong> "<a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by using $1000 of "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Services</p>
+				<p><a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">www.beautifulweddingannouncements.com</a></p>
 			</div>
 			
 		</div> <!-- /#content -->
