adding in photos for remaining service details pages and redoing the repeating rose for home page

--- a/details-decorations.html
+++ b/details-decorations.html
@@ -35,15 +35,13 @@
 		
 		<div id="content" class="decorations">
 			<a class="btn-back" href="services.html">Back</a>
-			<h3 class="decorations-header">Decoration</h3>
-			<!--
+			<h3 class="decorations-header">Decorations / Rentals</h3>
 			<ul class="img-row">
-				<li id="img-1"><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-2"><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-3"><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-1"><img src="img/rentals-img-1.jpg" title="Decorations / Rentals" alt="Decorations / Rentals"></li>
+				<li id="img-2"><img src="img/rentals-img-2.jpg" title="Decorations / Rentals" alt="Decorations / Rentals"></li>
+				<li id="img-3"><img src="img/rentals-img-3.jpg" title="Decorations / Rentals" alt="Decorations / Rentals"></li>
 				<span class="clear"></span>
 			</ul>
-			-->
 			<div class="deets-container-1">
 				<div class="background"></div>
 				<ul class="price-description">
