--- a/details-invitations.html
+++ b/details-invitations.html
@@ -36,14 +36,12 @@
 		<div id="content" class="invitations">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="invitations-header">Invitations</h3>
-			<!--
 			<ul class="img-row">
-				<li id="img-1"><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-2"><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-3"><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-1"><img src="img/invite-img-1.jpg" title="Invitations" alt="Invitations"></li>
+				<li id="img-2"><img src="img/invite-img-2.jpg" title="Invitations" alt="Invitations"></li>
+				<li id="img-3"><img src="img/invite-img-3.jpg" title="Invitations" alt="Invitations"></li>
 				<span class="clear"></span>
 			</ul>
-			-->
 			<div class="deets-container-1">
 				<div class="background"></div>
 				<p><img src="img/logo-2.png" title="For Every Occasion" alt="For Every Occasion"><br />has teamed with<br /><a href="http://www.beautifulweddingannouncements.com/" target="_blank"><img src="img/beautifulWeddingAnnouncements-logo.png" title="Beautiful Wedding Announcements" alt="Beautiful Wedding Announcements"></a></p>
