--- a/details-lighting.html
+++ b/details-lighting.html
@@ -36,14 +36,12 @@
 		<div id="content" class="lighting">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="lighting-header">Lighting and Drapery</h3>
-			<!--
 			<ul class="img-row">
-				<li id="img-1"><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-2"><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-3"><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-1"><img src="img/lighting-img-1.jpg" title="Lighting / Drapery" alt="Lighting / Drapery"></li>
+				<li id="img-2"><img src="img/lighting-img-2.jpg" title="Lighting / Drapery" alt="Lighting / Drapery"></li>
+				<li id="img-3"><img src="img/lighting-img-3.jpg" title="Lighting / Drapery" alt="Lighting / Drapery"></li>
 				<span class="clear"></span>
 			</ul>
-			-->
 			<div class="deets-container-1">
 				<div class="background"></div>
 				<p>Lighting and Drapery add to your event in ways that make it unique and set a mood for the occasion.</p>
