--- a/gallery.html
+++ b/gallery.html
@@ -88,6 +88,14 @@
 						<li><a href="img/gallery/46.jpg"><img src="img/gallery/thumbs/t46.jpg" class="image45"></a></li>
 						<li><a href="img/gallery/47.jpg"><img src="img/gallery/thumbs/t47.jpg" class="image46"></a></li>
 						<li><a href="img/gallery/48.jpg"><img src="img/gallery/thumbs/t48.jpg" class="image47"></a></li>
+						<li><a href="img/gallery/49.jpg"><img src="img/gallery/thumbs/t49.jpg" class="image48"></a></li>
+						<li><a href="img/gallery/50.jpg"><img src="img/gallery/thumbs/t50.jpg" class="image49"></a></li>
+						<li><a href="img/gallery/51.jpg"><img src="img/gallery/thumbs/t51.jpg" class="image50"></a></li>
+						<li><a href="img/gallery/52.jpg"><img src="img/gallery/thumbs/t52.jpg" class="image51"></a></li>
+						<li><a href="img/gallery/53.jpg"><img src="img/gallery/thumbs/t53.jpg" class="image52"></a></li>
+						<li><a href="img/gallery/54.jpg"><img src="img/gallery/thumbs/t54.jpg" class="image53"></a></li>
+						<li><a href="img/gallery/55.jpg"><img src="img/gallery/thumbs/t55.jpg" class="image54"></a></li>
+						<li><a href="img/gallery/56.jpg"><img src="img/gallery/thumbs/t56.jpg" class="image55"></a></li>
 					</ul>
 				</div>
 			</div>
